--- a/style.css
+++ b/style.css
@@ -8,9 +8,14 @@
 
 body {
     background-color: black;
-    font-size: 24px;
+    color: white;
+    font-size: 20px;
     margin-left: 8%;
     margin-top: 5%;
+}
+
+h1 {
+    font-size: 50px;
 }
 
 #wrapper {
@@ -32,17 +37,9 @@ body {
     /* border: #fff 2px solid; */
 }
 
-
-h1, h2, h3{
-    color: white;
-    text-align: center;
-}
 p {
-    color: white;
     font-size: 18px;
-    text-align: right;
     width: 40%;
-    margin-left: 60%;
     line-height: 1.5;
 }
 a {
@@ -53,6 +50,30 @@ a {
 .banner-text h1{
     text-align: left;
 }
+.container {
+    position: relative;
+}
+.container:hover img{
+    transition: .3s ease;
+    opacity: 0;
+}
+
+.year {
+    display: none;
+    font-weight: bolder;
+}
+
+.container:hover .year {
+    display: inline-block;
+    position: absolute;
+    left: 25%;
+    top: 30%;
+}
+
+.feature img {
+    float: right;
+}
+
 
 .button {
     background-color: #fff;
