--- a/A1/style.css
+++ b/A1/style.css
@@ -1,22 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,800;0,900;1,400&family=Quicksand:wght@300;400;600&display=swap');
-
 *{
     font-family: 'Playfair Display', serif;
     font-family: 'Quicksand', sans-serif;
 }
 
-
 body {
     background-color: black;
-    font-size: 24px;
+    color: white;
+    font-size: 20px;
     margin-left: 8%;
     margin-top: 5%;
+}
+
+h1 {
+    font-size: 50px;
 }
 
 #wrapper {
     width: 90%;
 }
-
 #moons {
     width: 100%;
     margin-top: 5%;
@@ -25,24 +27,15 @@ body {
     align-items: center;
     justify-content: space-around;
 }
-
 #moons img {
     width: 100px;
     height: auto;
     /* border: #fff 2px solid; */
 }
 
-
-h1, h2, h3{
-    color: white;
-    text-align: center;
-}
 p {
-    color: white;
     font-size: 18px;
-    text-align: right;
     width: 40%;
-    margin-left: 60%;
     line-height: 1.5;
 }
 a {
@@ -53,6 +46,30 @@ a {
 .banner-text h1{
     text-align: left;
 }
+.container {
+    position: relative;
+}
+.container:hover img{
+    transition: .3s ease;
+    opacity: 0;
+}
+
+.year {
+    display: none;
+    font-weight: bolder;
+}
+
+.container:hover .year {
+    display: inline-block;
+    position: absolute;
+    left: 25%;
+    top: 30%;
+}
+
+.feature img {
+    float: right;
+}
+
 
 .button {
     background-color: #fff;
@@ -66,13 +83,11 @@ a {
     height: auto;
     margin: 0;
 }
-
 footer {
     position: absolute;
     bottom: 5%;
     right: 5%;
 }
-
 @media only all and (max-width: 1024px) {
     #body {
         width: 80%;
