--- a/A3/style.css
+++ b/A3/style.css
@@ -6,10 +6,12 @@
 body {
     background-color: black;
     color: #D1C8C0;
-    width: 80%;
+    width: 900px;
     border: #CA9E42 10px solid;
-    height: 90vh;
-    margin-left: 15vh;
+    height: 92vh;
+    margin-left: 25%;
+    margin-top: 2em;
+    position: absolute;
     
 }
 
@@ -18,72 +20,44 @@ body {
     width: 700px;
     background-color: #D1C8C0;
     border-radius: 1px;
-    position: fixed;
-    top: 140px;
-    left: 471px;
-    right: 300px;
+    position: absolute;
+    margin-top: 0%;
+    margin-left: 10%;
+    margin-right: 15%;
     overflow: hidden;
-    z-index: 1;
 }
 
 #t1 {
-    position: fixed;
-    top: 5px; 
-    left: 440px;
+    position: relative;
+    top: -140px; 
+    left: -32px;
     width: 0;
     height: 0;
     border-top: 210px solid transparent;
     border-right: 210px solid #9EA2A5;
     border-bottom: 210px solid transparent;
     transform: rotate(45deg);
-    z-index: 2;
-    
+    z-index: 2;    
 }
 
 #t2 {
-    position: fixed;
-    top: 572px;
-    left: 470px;
+    position: relative;
+    top: 15px;
+    left: 0px;
     width: 0;
     height: 0;
     border-top: 135px solid transparent;
     border-right: 140px solid #CA9E42;
     border-bottom: 135px solid transparent;
     transform: rotate(180deg);
-    z-index: 4;
-}
-
-.fade {
-    height: 700px;
-    width: 700px;
-    background-color: #2e373f;
-    border-radius: 1px;
-    position: fixed;
-    top: 140px;
-    left: 471px;
-    right: 300px;
-    overflow: hidden;
-    transition: .2s ease-in;
-}
-
-
-.disappear {
-    transition: .5s;
-    opacity: 0;
-}
-
-.appear {
-    transition: 1s;
-    opacity: 1;
-    z-index: 4;
-    animation: my-animation 1.8s;
+    z-index: 5;
+    
 }
 
 #t3 {
-    position: fixed;
-    /* display: none; */
-    top: 340px;
-    left: 268px;
+    position: relative;
+    top: -490px;
+    left: -205px;
     width: 0;
     height: 0;
     width: 200px;
@@ -96,64 +70,208 @@ body {
 
 #t4 {
     position: relative;
-    top: -170px;
-    left: 305px;
+    top: -1151px;
+    left: 303px;
     width: 0;
     height: 0;
     border-top: 550px solid transparent;
     border-right: 480px solid #A01E10;
     border-bottom: 400px solid transparent;
     z-index: 1;
-    transform: rotate(8deg);
+    transform: rotate(7.5deg);
+    
+    
 }
 
 #t5 {
-    position: fixed;
-    top: 481px;
-    left: 744px;
+    position: relative;
+    top: -1573px;
+    left: 259px;
     width: 0;
     height: 0;
-    border-top: 251px solid transparent;
-    border-right: 266px solid #9EA2A5;
-    border-bottom: 301px solid transparent;
-    transform: rotate(-48.3deg);
+    border-top: 250px solid transparent;
+    border-right: 250px solid #9EA2A5;
+    border-bottom: 250px solid transparent;
+    transform: rotate(-45deg);
 }
 
 #t6 {
-    position: fixed;
-    top: 55px;
-    left: 937px;
+    position: relative;
+    top: -2525px;
+    left: 470px;
     width: 0;
     height: 0;
     border-top: 150px solid transparent;
     border-right: 150px solid #70696B;
     border-bottom: 170px solid transparent;
     transform: rotate(270deg);
+    z-index: 4;
 }
 
-#t7 {
-    position: fixed;
-    top: 572px;
-    left: 1830px;
-    width: 0;
-    height: 0;
-    border-top: 135px solid transparent;
-    border-right: 140px solid #CA9E42;
-    border-bottom: 135px solid transparent;
-    transform: rotate(180deg);
- /*    z-index: 4; */
+#icon {
+   position: absolute;
+   bottom: 3em;
+   right: 2em;
 }
 
-
-@keyframes my-animation {        
-    from {
-      opacity : 1;
-      left : 470px;
+@keyframes body {        
+    15% {
+        border-color: #B2CA42;
     }
-    to {
-      opacity : 0;
-      left : 1030px;
+    30% {
+        border-color: #CA5A42;
     }
-     
-  }
+    45% {
+        border-color: #3561bd;
+    }
+    60% {
+        border-color: #4D35BD;
+    }
+    75% {
+        border-color: #35A5BD;
+    }
+}
 
+@keyframes container {  
+    15% {
+        background-color: #D1D1C0;
+    }
+    30% {
+        background-color: #D1C0C1;
+    }     
+    45% {
+        background-color: #2e373f;
+    }
+    60% {
+        background-color: #2E2F3F;
+    }
+    75% {
+        background-color: #2E3F3F;
+    }
+}
+
+@keyframes icon {
+    15% {
+        color: #B2CA42;
+    }
+    30% {
+        color: #CA5A42;
+    }
+    45% {
+        color: #3561bd;
+    }
+    60% {
+        color: #4D35BD;
+    }
+    75% {
+        color: #35A5BD;
+    }
+}
+
+@keyframes t1 {        
+    15% {
+        border-color: #9E9EA5;
+    } 
+    30% {
+        border-color: #9EA5A5;
+    }
+    45% {
+        border-color: #A5A19E;
+    } 
+    60% {
+        border-color: #A5A49E;
+    } 
+    75% {
+        border-color: #A59E9E;
+    }  
+}
+
+@keyframes t2 {        
+    15% {
+        border-right-color: #B2CA42;
+    }
+    30% {
+        border-right-color: #CA5A42;
+    }
+    45% {
+        border-right-color: #3561bd;
+    }
+    60% {
+        border-right-color: #4D35BD;
+    }
+    75% {
+        border-right-color: #35A5BD;
+    }     
+}
+
+@keyframes t3 {
+    15% {
+        border-bottom-color: #292723;
+    }
+    30% {
+        border-bottom-color: #292325;
+    }    
+    45% {
+        border-bottom-color: #d6dbdc;
+    }
+    60% {
+        border-bottom-color: #D6D8DC;
+    }
+    75% {
+        border-bottom-color:  #D6DCDA;
+    }
+}
+
+@keyframes t4 {   
+    15% {
+        border-right-color: #A06610;
+    }
+    30% {
+        border-right-color: #A0104A;
+    }     
+    45% {
+        border-right-color: #5fe1ef;
+    }
+    60% {
+        border-right-color: #5F99EF;
+    }
+    75% {
+        border-right-color: #5FEFB5;
+    }
+}
+
+@keyframes t5 {        
+    15% {
+        border-color: #9E9EA5;
+    } 
+    30% {
+        border-color: #9EA5A5;
+    }
+    45% {
+        border-color: #A5A19E;
+    }    
+    60% {
+        border-color: #A5A49E;
+    }
+    75% {
+        border-color: #A59E9E;
+    }
+}
+
+@keyframes t6 {        
+    15% {
+        border-right-color: #706A69;
+    }
+    30% {
+        border-right-color: #70696F;
+    }     
+    45% {
+        border-right-color: #8f9694;
+    } 
+    60% {
+        border-right-color: #8F9596;
+    }   
+    75% {
+        border-right-color: #8F9596;
+    }
+}
