--- a/A7/style.css
+++ b/A7/style.css
@@ -3,180 +3,178 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 * {
-    font-family: 'Roboto', sans-serif;
-    color: white;
+  font-family: 'Roboto', sans-serif;
+  color: white;
 }
 
 body {
-    background-color: black;
+  background-color: black;
 }
 
 #timer {
-    display: none;
-    font-size: 7em;
-    position: fixed;
-    left: 50%;
-    top: 10%;
-    transform: translate(-50%, -50%);
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
+  display: none;
+  font-size: 7em;
+  position: fixed;
+  left: 50%;
+  top: 10%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
 }
 
 #startButton {
-    background-color: green;
-    color: white;
-    font-size: 5em;
-    font-weight: bold;
-    position: fixed;
-    left: 50%;
-    top: 85%;
-    transform: translate(-50%, -50%);
-    transition: opacity 0.5s ease-in-out;
+  background-color: green;
+  color: white;
+  font-size: 7em;
+  font-weight: bold;
+  position: fixed;
+  left: 50%;
+  top: 85%;
+  transform: translate(-50%, -50%);
+  transition: opacity 0.5s ease-in-out;
 }
 
 #startButton.hidden {
-    opacity: 0;
+  opacity: 0;
 }
 
 #nextButton {
-    margin-top: 2%;
-    background-color: gold;
-    color: white;
-    font-weight: bold;
-    font-size: 2em;
-    display: none;
-    position: fixed;
-    left: 50%;
-    top: 70%;
-    transform: translate(-50%, -50%);
+  margin-top: 2%;
+  background-color: gold;
+  color: white;
+  font-weight: bold;
+  font-size: 2em;
+  display: none;
+  position: fixed;
+  left: 50%;
+  top: 70%;
+  transform: translate(-50%, -50%);
 }
 
-
 #finishButton {
-    background-color: red;
-    color: white;
-    font-size: 6em;
-    font-weight: bold;
-    display: none;
-    position: fixed;
-    left: 50%;
-    top: 70%;
-    transform: translate(-50%, -50%);
+  background-color: red;
+  color: white;
+  font-size: 6em;
+  font-weight: bold;
+  display: none;
+  position: fixed;
+  left: 50%;
+  top: 70%;
+  transform: translate(-50%, -50%);
 }
 
 #question {
-    display: none;
-    position: fixed;
-    left: 50%;
-    top: 30%;
-    transform: translate(-50%, -50%);
+  display: none;
+  position: fixed;
+  left: 50%;
+  top: 30%;
+  transform: translate(-50%, -50%);
 }
 
 #questionContent {
-    text-align: center;
-    padding-top: 40vh;
-    font-size: 1em;
-    line-height: 0.5;
-    width: 110%; /* Adjust the width value as needed */
-    margin: 0 auto; /* Centers the element horizontally */
+  text-align: center;
+  padding-top: 40vh;
+  font-size: 1em;
+  line-height: 0.5;
+  width: 110%;
+  margin: 0 auto;
 }
 
 #question2Content {
-    text-align: center;
-    padding-top: 20vh;
-    font-size: 1em;
-    line-height: .5;
+  text-align: center;
+  padding-top: 20vh;
+  font-size: 1em;
+  line-height: .5;
 }
 
 .btn-primary {
-    background-color: green;
-    color: white;
-    font-weight: bold;
-    font-size: 2em;
+  background-color: green;
+  color: white;
+  font-weight: bold;
+  font-size: 2em;
 }
 
 #questionForm .btn-primary {
-    margin-top: 2%;
-    background-color: green;
-    color: white;
-    font-weight: bold;
-    font-size: 2em;
+  margin-top: 2%;
+  background-color: green;
+  color: white;
+  font-weight: bold;
+  font-size: 2em;
 }
 
 #answerInput {
-    color: black;
-    font-weight: bold;
-    font-size: 24px;
-    text-align: center;
-    margin: 2%;
-
+  color: black;
+  font-weight: bold;
+  font-size: 24px;
+  text-align: center;
+  margin: 2%;
 }
 
 #welcome {
-    position: absolute;
-    left: 50%;
-    top: 35%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    max-width: 1000px;
-    padding: 20px;
-    text-align: center;
-    margin: auto;
-    opacity: 1; /* Start with opacity 1 */
-    transition: opacity 0.5s ease-in-out; /* Add transition property */
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  max-width: 1000px;
+  padding: 20px;
+  text-align: center;
+  margin: auto;
+  opacity: 1;
+  transition: opacity 0.5s ease
 }
-
 #welcome h1 {
     font-weight: bold;
     font-size: 3em;
     padding-bottom: 2%;
-}
-#welcome p {
+  }
+  
+  #welcome p {
     font-weight: bold;
-}
-
-#welcome ul {
+  }
+  
+  #welcome ul {
     list-style: none;
     line-height: 1.5;
-}
-
-#nextPhase {
+  }
+  
+  #nextPhase {
     padding-top: 10em;
-}
-
-#nextPhase h1 {
+  }
+  
+  #nextPhase h1 {
     font-weight: bold;
     font-size: 4em;
     text-align: center;
-}
-
-#nextPhase p {
+  }
+  
+  #nextPhase p {
     font-weight: bold;
     text-align: center;
     font-size: 2em;
-}
-
-#lastPhase {
+  }
+  
+  #lastPhase {
     padding-top: 10em;
     max-width: 700px;
     position: fixed;
-    top: 5%;
-    left: 25%;
-}
-
-#lastPhase h1 {
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  
+  #lastPhase h1 {
     font-weight: bold;
     font-size: 4em;
-    text-align: center;
-}
-
-#lastPhase p {
+  }
+  
+  #lastPhase p {
     font-weight: bold;
-    text-align: center;
     font-size: 2em;
-}
-
-#finish {
+  }
+  
+  #finish {
     position: fixed;
     left: 50%;
     top: 40%;
@@ -186,108 +184,104 @@ body {
     padding: 20px;
     text-align: center;
     margin: auto;
-    opacity: 1; /* Start with opacity 1 */
-    transition: opacity 0.5s ease-in-out; /* Add transition property */
-
-}
-
-#welcome.hidden,
-#timer.hidden,
-#startButton.hidden {
-    opacity: 0; /* Hide elements with opacity 0 */
-}
-
-
-/* Media query for screens with a maximum width of 480px */
-@media screen and (max-width: 480px) {
-    
-    #welcome{
-        width: 100%;
-        min-width: 300px;
-        max-width: 450px;
-        top: 45%;
-        margin: 10px;
-        text-align: left;
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
+  }
+  
+  #welcome.hidden,
+  #timer.hidden,
+  #startButton.hidden {
+    opacity: 0;
+  }
+  
+  /* Media query for screens with a maximum width of 480px */
+  @media screen and (max-width: 480px) {
+    #welcome {
+      width: 100%;
+      min-width: 300px;
+      max-width: 450px;
+      top: 45%;
+      margin: 10px;
+      text-align: left;
     }
+  
     #welcome h1 {
-        font-size: 2em;
+      font-size: 2em;
     }
+  
     #welcome p {
-        font-size: 1em;
-        line-height: 1;
+      font-size: 1em;
+      line-height: 1;
     }
-    ul {
-        line-height: 1;
-        font-size: .8em;
-        padding-left: 10px;
-        max-width: 350px;
-        padding-bottom: 0px;
+  
+    #welcome ul {
+      line-height: 1;
+      font-size: 0.8em;
+      padding-left: 10px;
+      max-width: 350px;
+      padding-bottom: 0px;
     }
-
+  
     #timer {
-        font-size: 3em;
+      font-size: 3em;
     }
-
+  
     #startButton {
-        top: 85%;
-        font-size: 3em;
+      top: 85%;
+      font-size: 3em;
     }
-
+  
     #question {
-        max-width: 450px;
-        width: 100%;
-        padding-left: 0;
-        left: 45%;
+      max-width: 450px;
+      width: 100%;
+      padding-left: 0;
+      left: 45%;
     }
-
+  
     #questionContent {
-        font-size: .9em;
+      font-size: 0.9em;
     }
-
+  
     #questionButton {
-        position: fixed;
-        top: 50%;
-        left: 15%;
-        font-size: 2em;
+      position: fixed;
+      top: 50%;
+      left: 15%;
+      font-size: 2em;
     }
-
-    #nextPhase p{
-        padding-left: 10%;
-        font-size: 1em;
+  
+    #nextPhase p {
+      padding-left: 10%;
+      font-size: 1em;
     }
-
-    #nextPhase h1{
-        padding-left: 10%;
+  
+    #nextPhase h1 {
+      padding-left: 10%;
     }
-
+  
     #lastPhase {
-        max-width: 400px;
-        min-width: 350px;
-        left: 0%;
+      max-width: 400px;
+      min-width: 350px;
     }
-
+  
     #lastPhase p {
-        font-size: 1em;
-        max-width: 350px;
-        padding-left: 10px;
+      font-size: 1em;
+      max-width: 350px;
+      padding-left: 10px;
     }
-
+  
     #finishButton {
-        top: 80%;
+      top: 80%;
     }
-
+  
     #finish {
-        max-width: 400px;
-        min-width: 350px;
+      max-width: 400px;
+      min-width: 350px;
     }
-
-    #finish p{
+  
+    #finish p {
         font-size: 1em;
         line-height: 1;
         max-width: 300px;
         padding-left: 35px;
     }
-
 }
-
-
